kubernetes/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        volumeMounts:
        - name: homepage2
          mountPath: /usr/share/nginx/html
      volumes:
      - name: homepage
        emptyDir:
          sizeLimit: 5Mi
      - name: homepage2
        hostPath:
          path: /tmp/www
          type: DirectoryOrCreate
